Split up int rules; fix relative paths in JARs